--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
     <head>
         <meta charset="utf-8">
         <title>Sleep noise app</title>
-        <meta name="description" content="">
+        <meta name="description" content="Sleep noise app | Pink noise generator">
+        <!--<meta name="robots" content="noodp, noydir"> UNCOMMENT FOR PRODUCTION-->
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
